Resolved mobile overflow on projects

--- a/src/components/styles/layout.scss
+++ b/src/components/styles/layout.scss
@@ -8,6 +8,8 @@ html {
   overflow-y: scroll;
 }
 body {
+  width: 100%;
+  overflow: hidden;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
